--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "dependencies": {
     "axios": "^1.6.0",
     "express": "^4.18.1",
+    "nanoid": "^5.0.6",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@nx/esbuild": "18.0.7",
     "@nx/eslint": "18.0.7",
     "@nx/eslint-plugin": "18.0.7",
     "@nx/express": "18.0.7",
@@ -28,6 +30,7 @@
     "@types/node": "~18.16.9",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "esbuild": "^0.19.2",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.4.1",
