--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@test-org/lib-one": ["libs/lib-one/src/index.ts"],
+      "@test-org/lib-two": ["libs/lib-two/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
