Update build/start scripts

--- a/apps/api-one/package.json
+++ b/apps/api-one/package.json
@@ -1,6 +1,7 @@
 {
   "name": "api-one",
   "version": "0.0.1",
+  "type": "module",
   "scripts": {
     "start": "node ./dist/main.js",
     "gcp-build": ""
