Add deploy target

--- a/apps/api-two/package.json
+++ b/apps/api-two/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "start": "node ./dist/main.js",
+    "start": "node ../../dist/apps/api-one/main.js",
     "gcp-build": ""
   }
 }
