--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,4 +32,5 @@ jobs:
 #      - run: git branch --track main origin/main
 
 #      - run: npx nx-cloud record -- nx format:check
+      - run: npm i
       - run: npx nx affected -t lint test build
