--- a/libs/lib-two/package.json
+++ b/libs/lib-two/package.json
@@ -2,6 +2,6 @@
   "name": "@test-org/lib-two",
   "version": "0.0.1",
   "dependencies": {},
-  "type": "commonjs",
+  "type": "module",
   "main": "./index.cjs"
 }
